# quickjs

./: .gitignore  CMakeLists.txt  build.bat  build.sh  cutils.h  libregexp.c  qjs.c  qjsc.c  quickjs-atom.h  quickjs-libc.c  quickjs-libc.h  quickjs.c  quickjs.h
tests/: CMakeLists.txt  bjson.c  test_bjson.js
win/: getopt.h  pthread.c  pthread.h
